v1.0.0/modules/schema/pages/class/UKMinistryOfDefenceStandard.adoc
= `UKMinistryOfDefenceStandard`
:toclevels: 4


+++Standard published by United Kingdom Ministry of Defence.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UKMinistryOfDefenceStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`UKMinistryOfDefenceStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/UKMinistryOfDefenceStandardEditionKind.adoc[`UKMinistryOfDefenceStandardEditionKind`]
| +++Edition of UK Ministry of Defence standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/UKMinistryofDefenceStandardKind.adoc[`UKMinistryofDefenceStandardKind`]
| +++UK Ministry of Defence standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of UK Ministry of Defence standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UKMinistryOfDefenceStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/UKMinistryOfDefenceStandardEditionKind.adoc[`UKMinistryOfDefenceStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++UK Ministry of Defence standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UKMinistryOfDefenceStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/UKMinistryofDefenceStandardKind.adoc[`UKMinistryofDefenceStandardKind`]


|===


